<resources>
    <string name="app_name">Sub1 MyStoryApps</string>
    <string name="title_log">Selamat Datang di Story Apps</string>
    <string name="subtitle_log">Silakan masuk dengan menggunakan email yang terdaftar</string>
    <string name="emailLog">Masukkan email</string>
    <string name="passLog">Masukkan Password</string>
    <string name="masuk">Masuk</string>
    <string name="titleReg">Registrasi Akun</string>
    <string name="subtitleReg">Silakan Isi Data Diri Anda Terlebih Dahulu. Pastikan Mengisinya dengan Benar!</string>
    <string name="nama">Masukkan nama</string>
    <string name="emailReg">Masukkan Email</string>
    <string name="passReg">Masukkan Password</string>
    <string name="konfirmPass">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="notRegister">Maaf, Anda belum terdaaftar</string>
    <string name="isiEmail">Masukkan Email</string>
    <string name="isiPass">Masukkan Password</string>
    <string name="passMin8">Password kurang dari 8 karakter</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftarReg">Daftar</string>
    <string name="emailAda">Email sudah terdaftar</string>
    <string name="daftarSukses">Daftar berhasil!</string>
    <string name="passSama">Masukkan password yang sama</string>
    <string name="username">Username</string>
    <string name="description">Deskripsi</string>
    <string name="permission">Tidak ada izin</string>
    <string name="cameraFail">Gagal mengambil gambar</string>
    <string name="failCam">Kamera gagal</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="fill_description">Tambahkan deskripsi</string>
    <string name="tambahStory">Tambah Story</string>
    <string name="failRetrofit">Gagal instance ke retrofit</string>
    <string name="masukGambar">Masukkan gambar</string>
    <string name="pilihGambar">Pilih Gambar</string>
    <string name="namaApp">Story App</string>
    <string name="upload">Tambah Story</string>
    <string name="photo">Foto</string>
    <string name="titlePage">Story</string>
</resources>