<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".autentifikasi.register.RegistActivity">

    <TextView
        android:id="@+id/title_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleReg"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/subtitleReg"
        android:textColor="@color/skin"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_reg" />

    <EditText
        android:id="@+id/edtNamaReg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/nama"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_reg" />

    <EditText
        android:id="@+id/edtEmailReg"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/emailReg"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNamaReg" />

    <com.bella.sub1mystoryapps.autentifikasi.MyEditText
        android:id="@+id/edtPassReg1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/passReg"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailReg"
        app:layout_constraintStart_toStartOf="@+id/edtEmailReg"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailReg"/>

    <com.bella.sub1mystoryapps.autentifikasi.MyEditText
        android:id="@+id/edtPassReg2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/konfirmPass"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edtPassReg1"
        app:layout_constraintStart_toStartOf="@+id/edtPassReg1"
        app:layout_constraintTop_toBottomOf="@+id/edtPassReg1"/>

    <Button
        android:id="@+id/btnRegist"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/orange"
        android:text="@string/daftar"
        android:textColor="@color/putih"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edtPassReg2"
        app:layout_constraintStart_toStartOf="@+id/edtPassReg2"
        app:layout_constraintTop_toBottomOf="@+id/edtPassReg2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>