<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".autentifikasi.login.LoginActivity">

    <TextView
        android:id="@+id/title_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_log"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_log"
        app:layout_constraintVertical_bias="0.033"
        app:srcCompat="@drawable/home_page" />

    <TextView
        android:id="@+id/sub_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_log"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHome" />

    <EditText
        android:id="@+id/edtEmailLog"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="3dp"
        android:ems="10"
        android:hint="@string/emailLog"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_login"
        app:layout_constraintVertical_bias="0.18" />

    <com.bella.sub1mystoryapps.autentifikasi.MyEditText
        android:id="@+id/edtPassLog"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="3dp"
        android:hint="@string/passLog"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailLog"
        app:layout_constraintStart_toStartOf="@+id/edtEmailLog"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailLog"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/teal"
        android:text="@string/masuk"
        android:textColor="@color/abuabu"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edtPassLog"
        app:layout_constraintStart_toStartOf="@+id/edtPassLog"
        app:layout_constraintTop_toBottomOf="@+id/edtPassLog" />

    <TextView
        android:id="@+id/blmAdaAkun"
        android:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/belum_punya_akun"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.23" />

    <TextView
        android:id="@+id/tvRegis"
        android:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftarReg"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/blmAdaAkun"
        app:layout_constraintStart_toEndOf="@id/blmAdaAkun"
        app:layout_constraintTop_toTopOf="@+id/blmAdaAkun" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />
</androidx.constraintlayout.widget.ConstraintLayout>